style fixes